--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-06 09:53:53 -0500 
+%% Created for Evan Bollig at 2013-11-10 18:39:41 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Patankar1972,
+	Author = {S.V Patankar and D.B Spalding},
+	Date-Added = {2013-11-11 00:39:33 +0000},
+	Date-Modified = {2013-11-11 00:39:38 +0000},
+	Doi = {http://dx.doi.org/10.1016/0017-9310(72)90054-3},
+	Issn = {0017-9310},
+	Journal = {International Journal of Heat and Mass Transfer},
+	Number = {10},
+	Pages = {1787 - 1806},
+	Title = {A calculation procedure for heat, mass and momentum transfer in three-dimensional parabolic flows},
+	Url = {http://www.sciencedirect.com/science/article/pii/0017931072900543},
+	Volume = {15},
+	Year = {1972},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/0017931072900543},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/0017-9310(72)90054-3}}
 
 @unpublished{Gerstmann2009,
 	Author = {Derek Gerstmann},
