--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -210,10 +210,59 @@ P\pd{}{x_i} \phi = ( x_i \vx^T \vx_k - x_{i,k}) \frac{1}{r(\vx_k - \vx)}  \pd{}{
 %P\pd{}{x_3} = ( x_3 \vx^T \vx_k - x_{3,k}) \frac{1}{d(\vx_k - \vx)} \pd{\phi(d(\vx_k - \vx))}{d} |_{\vx=\vx_j}
 %\end{align}
 
+\subsubsection{Manufactured Solution}
+Our current investigation attempts to solve for $\vu$ and $p$ simultaneously. 
+To verify our implementation, we manufacture a solution that satisfies the continuity equation, Equation~\ref{eq:stokes_continuity}. Applying the identity
+\begin{align*} 
+\div (\curl g(\vx)) = 0,
+\end{align*} 
+for any function $g(\vx)$, we can easily manufacture a solution by choosing some vector function $g(\vx)$, projecting it onto the sphere via $P_x g(x)$ and applying the curl projection, $Q_x$: 
+\begin{align*} 
+Q_x = \begin{bmatrix} 0 & -x_3 & x_2 \\ x_3 & 0 & -x_1 \\ -x_2 & x_1 & 0 \end{bmatrix}.
+\end{align*} 
+Then, a manufactured solution that satisfies both momentum and continuity conditions on the surface of the sphere is given by: 
+\begin{align*} 
+\vu = Q_x (g(\vx))
+\end{align*} 
+
+Typically, on the surface of the sphere, the projection operator from Equation~\ref{eq:gradient_projection} must be applied to an arbitrary $g(\vx)$. 
+Our approach is to choose the components of $g(\vx)$ to be various spherical harmonics in Cartesian coordinates. Spherical harmonics nicely satisfy $P_x Y_l^m = Y_l^m$. Consequently, the entire application of $P_x$ is neglected. 
+
+
+We select $g(x)$ to be: 
+\begin{align}
+g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20} 
+\end{align}
+and the pressure function:
+\begin{align}
+P = Y_6^4 
+\end{align} 
+
+An example manufactured solution is shown in Figure~\ref{fig:manufactured_solution}, projected onto the plane via a Mollweide projection: 
+\begin{align*}
+x &= \frac{2\sqrt{2}}{\pi} \lambda \cos{\theta} \\
+y &= \sqrt{2}\sin{\theta}.
+\end{align*}
+
+\begin{figure} 
+\centering
+\begin{subfigure}[b]{\textwidth}
+\centering
+\includegraphics[width=1.0\textwidth]{../figures/paper2/figures/U_exact.png}
+\caption{Solution $Q_x( g(x) )$ with $g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20}$}
+\end{subfigure}
+\begin{subfigure}[b]{\textwidth}
+\centering
+\includegraphics[width=0.95\textwidth]{../figures/paper2/figures/RHS.png}
+\caption{Right Hand Side (Constant Viscosity)}
+\end{subfigure}
+\caption{A divergence free field is manufactured for the sphere. }
+\label{fig:manufactured_solution}
+\end{figure} 
 
 
 \subsubsection{Constraints} 
-Our current investigation attempts to solve for $\vu$ and $p$ simultaneously. Due to the lack of boundary conditions on the sphere, the family of solutions that satisfy the PDE in Equation~\ref{eq:stokes_constant_viscosity} includes four free constants (one for each $U$, $V$, $W$ and $p$). 
+Due to the lack of boundary conditions on the sphere, the family of solutions that satisfy the PDE in Equation~\ref{eq:stokes_constant_viscosity} includes four free constants (one for each $U$, $V$, $W$ and $p$). 
 %The null space is found using the matlab sparse SVD command: \begin{mcode}{1}
 %[Usvd, Ssvd, Vsvd, flagSVD] = svds(LHS,10,0);
 %sing_value_indices = find(max(Ssvd) < 1e-6)
@@ -249,7 +298,7 @@ Although the constraints in Equation~\ref{eq:stokes_system_with_constraints} sat
 %
 %Equation~\ref{eq:stokes_system_with_constraints} has all solution values for the vectors $U, V, W$ and $p$ grouped together, the values of $u_1$, $v_1$, $w_1$ and $p_1$ correspond to node $(x_1, y_1, z_1)$. 
 
-In a distributed environment values for $\vu$ and $p$ must be obtained from ghost nodes. Rather than execute four collectives (one per component), we interleave the solution vectors to group all components by node (e.g., $( u_1, v_1, w_1, p_1,\cdots, u_N, v_N, w_N, p_N)^T$). Figure~\ref{fig:interleaved_solution} demonstrates the concept of interleaving the solution. This allows us to operate on four-element wide vectors containing the $\{u_i, v_i, w_i, p_i\}$ for each node $x_i$, and maintains contiguous memory copies between host and device in multi-GPU mode. 
+In a distributed environment some values for $\vu$ and $p$ are obtained from ghost nodes. Rather than execute four collectives (one per component), we interleave the solution vectors to group all components by node (e.g., $( u_1, v_1, w_1, p_1,\cdots, u_N, v_N, w_N, p_N)^T$). Figure~\ref{fig:interleaved_solution} demonstrates the concept of interleaving the solution. This allows us to operate on four-element wide vectors containing the $\{u_i, v_i, w_i, p_i\}$ for each node $x_i$, and maintains contiguous memory copies between host and device in multi-GPU mode. 
 
 \begin{figure}[ht] 
 \centering
@@ -285,67 +334,21 @@ In a distributed environment values for $\vu$ and $p$ must be obtained from ghos
 
 Figure~\ref{fig:interleaved_solution} demonstrates the effect of interleaving our solution. The sparsity pattern of the original DM with solutions grouped by component is shown in Figure~\ref{fig:original_stokes_dm}. Well defined blocks of non-zeros are filled with RBF-FD weights from Equation~\ref{eq:stokes_constant_viscosity}. Figure~\ref{fig:interleaved_stokes_dm} presents the sparsity pattern for interleaved solution components. The pattern is similar to a single block of Figure~\ref{fig:original_stokes_dm}, but the sub-matrix $(10:50)\times(10:50)$ of each solution ordering, shown in Figures~\ref{fig:original_stokes_zoom_dm} and \ref{fig:interleaved_stokes_zoom_dm}, illustrate that non-zeros in Figure~\ref{fig:interleaved_stokes_dm} are small $4\times4$ blocks with the structure of Equation~\ref{eq:stokes_constant_viscosity}.
 
-We also note that interleaved solutions can be replaced by multiple SpMVs. For example, each of the 9 nonzero blocks of Equation~\ref{eq:stokes_system_with_constraints} can be multiplied independently against the four vectors $U, V, W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} showed that , we investigated the increase
+Our current application of interleaving was started only to simplify MPI communication and data transfers between CPUs and GPUs. However, future work will continue to investigate interleaving for the purpose of increased operational intensity. For example, each of the 9 nonzero blocks of Equation~\ref{eq:stokes_system_with_constraints} can be multiplied independently against the four vectors $U, V, W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} showed that multiplying multiple sparse matrices against multiple vectors , we investigated the increase
 
 %Future work in this area will include integrating the SpMM from \cite{ErlebacherSauleFlyerBollig2013} into an a fluid simulation.
 
 
-\subsubsection{Manufactured Solution}
-
-To verify our implementation, we manufacture a solution that satisfies the continuity equation, Equation~\ref{eq:stokes_continuity}. Applying the identity
-\begin{align*} 
-\div (\curl g(\vx)) = 0,
-\end{align*} 
-for any function $g(\vx)$, we can easily manufacture a solution by choosing some vector function $g(\vx)$, projecting it onto the sphere via $P_x g(x)$ and applying the curl projection, $Q_x$: 
-\begin{align*} 
-Q_x = \begin{bmatrix} 0 & -x_3 & x_2 \\ x_3 & 0 & -x_1 \\ -x_2 & x_1 & 0 \end{bmatrix}.
-\end{align*} 
-Then, a manufactured solution that satisfies both momentum and continuity conditions on the surface of the sphere is given by: 
-\begin{align*} 
-\vu = Q_x (g(\vx))
-\end{align*} 
-
-Typically, on the surface of the sphere, the projection operator from Equation~\ref{eq:gradient_projection} must be applied to an arbitrary $g(\vx)$. 
-Our approach is to choose the components of $g(\vx)$ to be various spherical harmonics in Cartesian coordinates. Spherical harmonics nicely satisfy $P_x Y_l^m = Y_l^m$. Consequently, the entire application of $P_x$ is neglected. 
+%\subsubsection{Manufactured Solution}
 
 
-We select $g(x)$ to be: 
-\begin{align}
-g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20} 
-\end{align}
-and the pressure function:
-\begin{align}
-P = Y_6^4 
-\end{align} 
-
-The manufactured solution is shown in Figure~\ref{fig:manufactured_solution}, projected onto the plane via a Mollweide projection: 
-\begin{align*}
-x &= \frac{2\sqrt{2}}{\pi} \lambda \cos{\theta} \\
-y &= \sqrt{2}\sin{\theta}.
-\end{align*}
-
-\begin{figure} 
-\centering
-\begin{subfigure}[b]{\textwidth}
-\centering
-\includegraphics[width=1.0\textwidth]{../figures/paper2/figures/U_exact.png}
-\caption{Solution $Q_x( g(x) )$ with $g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20}$}
-\end{subfigure}
-\begin{subfigure}[b]{\textwidth}
-\centering
-\includegraphics[width=0.95\textwidth]{../figures/paper2/figures/RHS.png}
-\caption{Right Hand Side (Constant Viscosity)}
-\end{subfigure}
-\caption{A divergence free field is manufactured for the sphere. }
-\label{fig:manufactured_solution}
-\end{figure} 
 %
 %\subsubsection{Convergence}
 %
 %%TODO: convergence for Stokes
 %As the problem size $N$ increases, we expect the approximation to the solution to converge on the order of $\sqrt{n}$ where $n$ is the choice of stencil size. %Figure~\ref{fig:convergence} demonstrates the convergence of our solution with respect to $\sqrt{N}$ for stencil sizes $n=31$, $101$ 
-%
-\authnote{Include convergence plot from handout as initial evidence; state that its ongoing investigation to improve}. 
+%%
+%\authnote{Include convergence plot from handout as initial evidence; state that its ongoing investigation to improve}. 
 
 
 
