fixed appendices label to start before first appendix

--- a/latex/rbffd_avoid_pole_singularities.tex
+++ b/latex/rbffd_avoid_pole_singularities.tex
@@ -10,6 +10,8 @@
 %\begin{document}
 %\fi
 
+\appendix
+
 \chapter{Avoiding Pole Singularities with RBF-FD}
 \label{app:rbffd_remove_singularities}
 
