--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -296,7 +296,7 @@ Although the constraints in Equation~\ref{eq:stokes_system_with_constraints} sat
 
 \subsubsection{Interleaved Solution}
 %
-%Equation~\ref{eq:stokes_system_with_constraints} has all solution values for the vectors $U, V, W$ and $p$ grouped together, the values of $u_1$, $v_1$, $w_1$ and $p_1$ correspond to node $(x_1, y_1, z_1)$. 
+%Equation~\ref{eq:stokes_system_with_constraints} has all solution values for the vectors $U$, $V$, $W$ and $p$ grouped together, the values of $u_1$, $v_1$, $w_1$ and $p_1$ correspond to node $(x_1, y_1, z_1)$. 
 
 In a distributed environment some values for $\vu$ and $p$ are obtained from ghost nodes. Rather than execute four collectives (one per component), we interleave the solution vectors to group all components by node (e.g., $( u_1, v_1, w_1, p_1,\cdots, u_N, v_N, w_N, p_N)^T$). Figure~\ref{fig:interleaved_solution} demonstrates the concept of interleaving the solution. This allows us to operate on four-element wide vectors containing the $\{u_i, v_i, w_i, p_i\}$ for each node $x_i$, and maintains contiguous memory copies between host and device in multi-GPU mode. 
 
@@ -334,9 +334,7 @@ In a distributed environment some values for $\vu$ and $p$ are obtained from gho
 
 Figure~\ref{fig:interleaved_solution} demonstrates the effect of interleaving our solution. The sparsity pattern of the original DM with solutions grouped by component is shown in Figure~\ref{fig:original_stokes_dm}. Well defined blocks of non-zeros are filled with RBF-FD weights from Equation~\ref{eq:stokes_constant_viscosity}. Figure~\ref{fig:interleaved_stokes_dm} presents the sparsity pattern for interleaved solution components. The pattern is similar to a single block of Figure~\ref{fig:original_stokes_dm}, but the sub-matrix $(10:50)\times(10:50)$ of each solution ordering, shown in Figures~\ref{fig:original_stokes_zoom_dm} and \ref{fig:interleaved_stokes_zoom_dm}, illustrate that non-zeros in Figure~\ref{fig:interleaved_stokes_dm} are small $4\times4$ blocks with the structure of Equation~\ref{eq:stokes_constant_viscosity}.
 
-Our current application of interleaving was started only to simplify MPI communication and data transfers between CPUs and GPUs. However, future work will continue to investigate interleaving for the purpose of increased operational intensity. Each of the 16 blocks of Equation~\ref{eq:stokes_constant_viscosity} can be multiplied independently against the four vectors $U, V, W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} shows that multiplying multiple sparse matrices with the same sparsity pattern against a matrix of vectors---that is, performing multiple Sparse Matrix-times-Matrix multiplies (SpMMs)---can be formulated as a tensor cross product for each nonzero element of the matrices. The tensor cross products increase operational intensity are able to achieve significantly higher GFLOP/sec a single SpMV. 
-
-%Future work in this area will include integrating the SpMM from \cite{ErlebacherSauleFlyerBollig2013} into an a fluid simulation.
+Our current application of interleaving was started only to simplify MPI communication and data transfers between CPUs and GPUs. However, future work will continue to investigate interleaving for the purpose of increased operational intensity. Each of the 16 blocks of Equation~\ref{eq:stokes_constant_viscosity} can be multiplied independently against the four vectors $U$, $V$, $W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} shows that multiplying multiple sparse matrices with the same sparsity pattern against a matrix of vectors---that is, performing multiple Sparse Matrix-times-Matrix multiplies (SpMMs)---can be formulated as a tensor cross product for each nonzero element of the matrices. The tensor cross products increase operational intensity and achieve significantly higher GFLOP/sec compared to a single SpMV \cite{ErlebacherSauleFlyerBollig2013}. Future work will apply the tensor products to solve Stokes flow on the sphere. 
 
 
 %\subsubsection{Manufactured Solution}
