--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -334,7 +334,7 @@ In a distributed environment some values for $\vu$ and $p$ are obtained from gho
 
 Figure~\ref{fig:interleaved_solution} demonstrates the effect of interleaving our solution. The sparsity pattern of the original DM with solutions grouped by component is shown in Figure~\ref{fig:original_stokes_dm}. Well defined blocks of non-zeros are filled with RBF-FD weights from Equation~\ref{eq:stokes_constant_viscosity}. Figure~\ref{fig:interleaved_stokes_dm} presents the sparsity pattern for interleaved solution components. The pattern is similar to a single block of Figure~\ref{fig:original_stokes_dm}, but the sub-matrix $(10:50)\times(10:50)$ of each solution ordering, shown in Figures~\ref{fig:original_stokes_zoom_dm} and \ref{fig:interleaved_stokes_zoom_dm}, illustrate that non-zeros in Figure~\ref{fig:interleaved_stokes_dm} are small $4\times4$ blocks with the structure of Equation~\ref{eq:stokes_constant_viscosity}.
 
-Our current application of interleaving was started only to simplify MPI communication and data transfers between CPUs and GPUs. However, future work will continue to investigate interleaving for the purpose of increased operational intensity. Each of the 16 blocks of Equation~\ref{eq:stokes_constant_viscosity} can be multiplied independently against the four vectors $U$, $V$, $W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} shows that multiplying multiple sparse matrices with the same sparsity pattern against a matrix of vectors---that is, performing multiple Sparse Matrix-times-Matrix multiplies (SpMMs)---can be formulated as a tensor cross product for each nonzero element of the matrices. The tensor cross products increase operational intensity and achieve significantly higher GFLOP/sec compared to a single SpMV \cite{ErlebacherSauleFlyerBollig2013}. Future work will apply the tensor products to solve Stokes flow on the sphere. 
+Our current application of interleaving was started only to simplify MPI communication and data transfers between CPUs and GPUs. However, future work will continue to investigate interleaving for the purpose of increased operational intensity. Each of the 16 blocks of Equation~\ref{eq:stokes_constant_viscosity} can be multiplied independently against the four vectors $U$, $V$, $W$ and $p$. Our work in \cite{ErlebacherSauleFlyerBollig2013} shows that multiplying multiple sparse matrices with the same sparsity pattern against a matrix of vectors---that is, performing multiple Sparse Matrix-times-Matrix multiplies (SpMMs)---can be formulated as a tensor cross product for each nonzero element of the matrices. The tensor cross products increase operational intensity and achieve significantly higher GFLOP/sec compared to a single SpMV \cite{ErlebacherSauleFlyerBollig2013}. %Future work will apply the tensor products to solve Stokes flow on the sphere. 
 
 
 %\subsubsection{Manufactured Solution}
