--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -3,6 +3,10 @@
 \chapter{Distributed GPU SpMV}
 \label{chap:multigpu_rbffd}
 
+The distributed GPU 
+
+
+
 Recent advances in distributed (multi-)GPU computing involve NVidia's GPU Direct technology. GPU Direct allows hardware like the PCI-e bus to directly access memory on the GPU device. CUDA V5.5 adds full support for MPI applications 
 
 
